--- a/Etch-a-sketch/index.html
+++ b/Etch-a-sketch/index.html
@@ -5,8 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Etch-a-sketch</title>
+    <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
+    <div class="container">
+
+    </div>
     
+    <script src="Etch-a-sketch.js"></script>
 </body>
 </html>
