etch a sketch completed

--- a/Etch-a-sketch/index.html
+++ b/Etch-a-sketch/index.html
@@ -7,7 +7,13 @@
     <title>Etch-a-sketch</title>
     <link rel="stylesheet" href="stylesheet.css">
 </head>
-<body>
+<body> 
+    <h1 class="logo">E t c h - a - s k e t c h</h1>
+    <div class="box"></div>
+    <div class="knob1"></div>
+    <div class="knob2"></div>
+    <div class="knobTop1"></div>
+    <div class="knobTop2"></div>
     <div class="container">
 
     </div>
